force-app/main/default/objects/Time_Record__c/Time_Record__c.object-meta.xml
<CustomObject>
    <description>Used to track time records</description>
    <label>Time Record</label>
    <nameField>
        <displayFormat>TR-{00000000}</displayFormat>
        <label>Time Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>