force-app/main/default/objects/Time_Record__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date of Activity/Work.  For Weekly Recordings (FR), this will just be the Create Date</description>
    <label>Activity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>