force-app/main/default/objects/Time_Record__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Type of Activity for Time Being Tracked</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit Review Time</fullName>
            </value>
            <value>
                <fullName>Closing/Bring Down</fullName>
            </value>
            <value>
                <fullName>Conduct Analysis</fullName>
            </value>
            <value>
                <fullName>Conduct Research</fullName>
            </value>
            <value>
                <fullName>Counsel/Client Communications</fullName>
            </value>
            <value>
                <fullName>CS - Admin</fullName>
            </value>
            <value>
                <fullName>CS - Audit support</fullName>
            </value>
            <value>
                <fullName>CS - Initial Analysis</fullName>
            </value>
            <value>
                <fullName>CS - Iterations</fullName>
            </value>
            <value>
                <fullName>CS - Quality Review</fullName>
            </value>
            <value>
                <fullName>Deposition (including preparation for)</fullName>
            </value>
            <value>
                <fullName>Develop Work Product</fullName>
            </value>
            <value>
                <fullName>Diligence Discussion with Client</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>OOS</fullName>
            </value>
            <value>
                <fullName>Scoping / Admin</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Fieldwork</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Internal Admin/Planning</fullName>
            </value>
            <value>
                <fullName>Marketing - NB</fullName>
            </value>
            <value>
                <fullName>Non-Billable - NB</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Pre-Engagement</fullName>
            </value>
            <value>
                <fullName>Receive/Catalogue/Review Data</fullName>
            </value>
            <value>
                <fullName>Report Writing</fullName>
            </value>
            <value>
                <fullName>Review of Work Product</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>Testimony (including preparation for)</fullName>
            </value>
            <value>
                <fullName>Workstream 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>