force-app/main/default/objects/Time_Record__c/fields/Add_Minute__c.field-meta.xml
<CustomField>
    <fullName>Add_Minute__c</fullName>
    <label>Add Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>