force-app/main/default/objects/Time_Record__c/fields/Add_Minute_Change__c.field-meta.xml
<CustomField>
    <fullName>Add_Minute_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Minute Change</label>
    <type>Checkbox</type>
</CustomField>