force-app/main/default/objects/Time_Record__c/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <description>(0 = Sunday, 1 = Monday, 2 = Tuesday, 3 = Wednesday, 4 = Thursday, 5 = Friday, 6 = Saturday)</description>
    <formula>MOD(Activity_Date__c - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Of Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>