force-app/main/default/objects/Time_Record__c/fields/Day_Rollup_Key__c.field-meta.xml
<CustomField>
    <fullName>Day_Rollup_Key__c</fullName>
    <formula>TEXT(YEAR(Activity_Date__c)) + &apos;_&apos; + TEXT(MONTH(Activity_Date__c)) + &apos;_&apos; + TEXT(DAY(Activity_Date__c)) + &apos;_&apos; + Time_Record_Period_Staff_Member__r.User__c + &apos;_&apos; +  BLANKVALUE(Engagement__c , BLANKVALUE(Opportunity__c, Special_Project__c))</formula>
    <label>Day Rollup Key</label>
    <type>Text</type>
</CustomField>