force-app/main/default/objects/Time_Record__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Time Records</relationshipLabel>
    <relationshipName>Time_Records</relationshipName>
    <type>Lookup</type>
</CustomField>