force-app/main/default/objects/Time_Record__c/fields/Hours_Change__c.field-meta.xml
<CustomField>
    <fullName>Hours_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Change</label>
    <type>Checkbox</type>
</CustomField>