force-app/main/default/objects/Time_Record__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Hours Worked Value</description>
    <label>Hours Worked</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>