force-app/main/default/objects/Time_Record__c/fields/Hours_Worked_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Weekday__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Hours worked for the week for the project.  Used in FR Time Tracking</description>
    <label>Hours Worked Weekday</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>