force-app/main/default/objects/Time_Record__c/fields/Hours_Worked_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Weekend__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Hours worked for the week on the weekend.  Used for FR Time Tracking</description>
    <label>Hours Worked Weekend</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>