force-app/main/default/objects/Time_Record__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <formula>BLANKVALUE( TEXT(Engagement__r.Industry_Group__c ), TEXT(Opportunity__r.Industry_Group__c ))</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>