force-app/main/default/objects/Time_Record__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <description>Indicates if the time is billable</description>
    <formula>IF(
Special_Project__c != null, 
Special_Project__r.Is_Billable__c, 
IF(
AND( OR(ISNULL(Special_Project__c) ,  ISBLANK(Special_Project__c) )
,TEXT(Time_Record_Period_Staff_Member__r.Time_Record_Period__r.Period_Category__c) =&quot;Beta&quot;
,OR(
TEXT(Activity_Type__c)=&quot;Non-Billable - NB&quot; , TEXT(Activity_Type__c)=&quot;Marketing - NB&quot;
)
)

, FALSE, TRUE))</formula>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>