force-app/main/default/objects/Time_Record__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <description>Indicates if the record should be locked from edits</description>
    <formula>Time_Record_Period_Staff_Member__r.Time_Record_Period__r.Is_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>