force-app/main/default/objects/Time_Record__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <formula>BLANKVALUE( TEXT(Engagement__r.Job_Type__c)  ,  TEXT(Opportunity__r.Job_Type__c ))</formula>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>