force-app/main/default/objects/Time_Record__c/fields/Minutes_Worked__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Worked__c</fullName>
    <label>Minutes Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>