force-app/main/default/objects/Time_Record__c/fields/Project_Activity__c.field-meta.xml
<CustomField>
    <fullName>Project_Activity__c</fullName>
    <formula>Project_Name__c &amp;&quot; - &quot;&amp;  TEXT(Activity_Type__c)</formula>
    <label>Project Activity</label>
    <type>Text</type>
</CustomField>