force-app/main/default/objects/Time_Record__c/fields/Recording_Status__c.field-meta.xml
<CustomField>
    <fullName>Recording_Status__c</fullName>
    <description>Used to monitor whether the user completed the time record</description>
    <label>Recording Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>