force-app/main/default/objects/Time_Record__c/fields/Seconds_Worked__c.field-meta.xml
<CustomField>
    <fullName>Seconds_Worked__c</fullName>
    <label>Seconds Worked</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>