force-app/main/default/objects/Time_Record__c/fields/Seconds_Worked_Actual__c.field-meta.xml
<CustomField>
    <fullName>Seconds_Worked_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time (in seconds) without rounding</description>
    <label>Seconds Worked Actual</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>