force-app/main/default/objects/Time_Record__c/fields/Special_Project__c.field-meta.xml
<CustomField>
    <fullName>Special_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related special project record</description>
    <label>Special Project</label>
    <referenceTo>Special_Project__c</referenceTo>
    <relationshipLabel>Time Records</relationshipLabel>
    <relationshipName>Time_Records</relationshipName>
    <type>Lookup</type>
</CustomField>