force-app/main/default/objects/Time_Record__c/fields/Stop_Time__c.field-meta.xml
<CustomField>
    <fullName>Stop_Time__c</fullName>
    <label>Stop Time</label>
    <type>DateTime</type>
</CustomField>