force-app/main/default/objects/Time_Record__c/fields/TAS_Services__c.field-meta.xml
<CustomField>
    <fullName>TAS_Services__c</fullName>
    <formula>BLANKVALUE( TEXT(Engagement__r.TAS_Services__c), TEXT(Opportunity__r.TAS_Services__c))</formula>
    <label>TAS Services</label>
    <type>Text</type>
</CustomField>