force-app/main/default/objects/Time_Record__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>TEXT(FLOOR(Hours_Worked__c))
&amp;&apos;hr&apos;&amp; 
if((Hours_Worked__c*60)&gt;59.9,TEXT(FLOOR(MOD((Hours_Worked__c *60),60))),TEXT((Hours_Worked__c*60)))
&amp;&apos;min&apos; &amp; if(FLOOR(MOD((Hours_Worked__c*3600),60))&gt;59.9,TEXT(FLOOR(MOD((FLOOR(MOD((Hours_Worked__c*3600),60))),60))),TEXT(FLOOR(MOD((Hours_Worked__c*3600),60))))&amp;&apos;sec&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>