force-app/main/default/objects/Time_Record__c/fields/Timer_Status__c.field-meta.xml
<CustomField>
    <fullName>Timer_Status__c</fullName>
    <label>Timer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>