force-app/main/default/objects/Time_Record__c/recordTypes/Beta.recordType-meta.xml
<RecordType>
    <fullName>Beta</fullName>
    <active>true</active>
    <label>Beta</label>
</RecordType>