force-app/main/default/objects/Time_Record__c/recordTypes/FR.recordType-meta.xml
<RecordType>
    <fullName>FR</fullName>
    <active>true</active>
    <description>FR Time Tracking Record Type</description>
    <label>FR</label>
</RecordType>