force-app/main/default/objects/Time_Record__c/recordTypes/Litigation.recordType-meta.xml
<RecordType>
    <fullName>Litigation</fullName>
    <active>true</active>
    <description>Litigation Time Tracking Record</description>
    <label>Litigation</label>
</RecordType>