force-app/main/default/objects/Time_Record__c/recordTypes/PV.recordType-meta.xml
<RecordType>
    <fullName>PV</fullName>
    <active>true</active>
    <label>PV</label>
</RecordType>