force-app/main/default/objects/Time_Record__c/recordTypes/SC.recordType-meta.xml
<RecordType>
    <fullName>SC</fullName>
    <active>true</active>
    <label>SC</label>
</RecordType>