force-app/main/default/objects/Time_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Activity_Date__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Staff_Member_Name__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>